# DevCoin

./: .gitignore  README.md  configure.sh  start.sh
.github/workflows/: ci.yml  integration.yml  lint-build.yml
src/blockchain-node/: Cargo.toml  README.md
src/blockchain-node/src/: main.rs
src/blockchain-node/tests/: integration.rs
src/contrib-oracle/: README.md  go.mod  go.sum
src/contrib-oracle/cmd/genkey/: main.go
src/contrib-oracle/cmd/oracle/: main.go
src/contrib-oracle/internal/server/: actions.go  actions_test.go  server.go  server_test.go
src/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/src/: styles.css
src/frontend/src/ui/: App.tsx
src/frontend/src/utils/: api.ts
