[package]
name = "devcoin-node"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["DevCoin Contributors"]
description = "DevCoin blockchain node (MVP) with simple PoA consensus and REST API"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1"
