[package]
name = "devcoin-node"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["DevCoin Contributors"]
description = "DevCoin blockchain node (MVP) with simple PoA consensus and REST API"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1"
ed25519-dalek = "2"
base64 = "0.21"

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
tempfile = "3"
rand = "0.8"
